# omni

./: CMakeLists.txt  OMNI.cc  OMNI.h  README.md
.github/workflows/: lin.yml  mac.yml  win.yml
cmake/: omniConfig.cmake.in
